# vista-mapping-pipeline

./: .gitignore  Dockerfile.rtabmap_standalone  README.md  process_svo.py  zed_mapping.py
backend/: config.py  main.py
backend/routers/: capture.py  pipeline.py
backend/utils/: process_manager.py
config/presets/: garage.yaml  indoor.yaml  outdoor.yaml
config/scenes/: garage_05.yaml  garage_06.yaml  outdoor_03.yaml  outdoor_04.yaml  outdoor_09.yaml  rdc_07.yaml
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
src/: convert_poses.py  convert_superpoint.py  process_svo.py  project_ply.py  run_pipeline.py  svo_export.py  svo_playback.py  svo_recording.py  zed_camera_info.py  zed_mapping.py
src/launchers/: launch_garage.sh  launch_garage_05.sh  launch_outdoor.sh  launch_outdoor_03.sh  launch_outdoor_04.sh  launch_rdc.sh  launch_rdc_07.sh
tools/ZedSvo/: CMakeLists.txt  main.cpp
tools_patch/ZedSvo/: CMakeLists.txt  main.cpp
