IF(ZED_INCLUDE_DIRS)
    INCLUDE_DIRECTORIES(${ZED_INCLUDE_DIRS})
ENDIF()

ADD_EXECUTABLE(zed_svo main.cpp)

TARGET_LINK_LIBRARIES(zed_svo rtabmap_core ${ZED_LIBRARIES})

SET_TARGET_PROPERTIES(zed_svo
    PROPERTIES OUTPUT_NAME ${PROJECT_PREFIX}-zed_svo)

INSTALL(TARGETS zed_svo
    RUNTIME DESTINATION "${CMAKE_INSTALL_BINDIR}" COMPONENT runtime
    BUNDLE  DESTINATION "${CMAKE_BUNDLE_LOCATION}" COMPONENT runtime)
